--- a/_slides/09-nbisd3287.md
+++ b/_slides/09-nbisd3287.md
@@ -3,7 +3,7 @@ layout: slide
 title: "Welcome to our slide deck!"
 ---
 
-Caption here
+Welcome to my wonderful show!
 
 ![dojocat](https://octodex.github.com/images/dojocat.jpg)
 {: .center}
