--- a/_slides/06-jeny972.md
+++ b/_slides/06-jeny972.md
@@ -3,7 +3,7 @@ layout: slide
 title: "Welcome to our slide deck!"
 ---
 
-Update
+Welcome to Poptocat's Slide
 
 ![poptocat2](https://octodex.github.com/images/poptocat_v2.png)
 {: .center}
